<resources>
    <string name="app_name" translatable="false">EventHub</string>
    <string name="title_new_event">Новое событие</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="event_name">Название события</string>
    <string name="what_s_your_name">Как тебя зовут?</string>
    <string name="end_time">Время завершения</string>
    <string name="start_time">Время начала</string>
    <string name="describe_your_event">Опишите событие</string>
    <string name="add_event">Добавить событие</string>
    <string name="event_place">Место проведения</string>
    <string name="want_to_go">Хочу пойти</string>
    <string name="name">Имя</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Введите пароль ещё раз</string>
    <string name="your_gender">Твой пол</string>
    <string name="birthday">День рождения</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="auth_settings_key">user</string>
    <string name="assign_done">Вы участвуете!</string>
    <string name="set_place">Выбрать место</string>
    <string-array name="sexlist">
        <item>Парень</item>
        <item>Девушка</item>
    </string-array>
    <string name="title_activity_my_events">Мои события</string>
    <string name="title_assigned_events">Иду</string>
    <string name="signup_birthday">birthday</string>
    <string name="title_activity_maps">Карта города</string>
</resources>
